--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -32,8 +32,9 @@
   <button id="getCookies">List Cookies</button>
   <button id="yankCookies">Yank Cookies</button>
   <button id="restoreCookies">Restore Cookies</button>
-  <button id="exportCookies">Export Cookies</button>
-  <button id="importCookies">Import Cookies</button>
+  <input type="password" id="passwordInput" placeholder="Enter password securely">
+  <button id="encryptCookies">Export Cookies</button>
+  <button id="decryptCookies">Import Cookies</button>  
   <div id="cookieList"></div>
   <script src="popup.js"></script>
 </body>
