--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,41 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cookie Lister</title>
-  <style>
-    body {
-      width: 300px;
-      padding: 10px;
-      font-family: Arial, sans-serif;
-    }
-    button {
-      width: 100%;
-      padding: 8px;
-      margin: 5px 0;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
-    #cookieList {
-      white-space: pre-wrap;
-      font-size: 12px;
-      max-height: 300px;
-      overflow-y: auto;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Save the Biscuits</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <button id="getCookies">List Cookies</button>
-  <button id="yankCookies">Yank Cookies</button>
-  <button id="restoreCookies">Restore Cookies</button>
-  <input type="password" id="passwordInput" placeholder="Enter password securely">
-  <button id="encryptCookies">Export Cookies</button>
-  <button id="decryptCookies">Import Cookies</button>  
-  <div id="cookieList"></div>
-  <script src="popup.js"></script>
+  <div class="container text-center">
+    <div class="popup-header">
+        <img class="logo" src="../cookie.png" alt="Cookie Icon">
+        <h1>Save the Cookies</h1>
+    </div>
+
+    <button id="getCookies" class="btn btn-primary btn-custom">List Cookies</button>
+    <button id="yankCookies" class="btn btn-danger btn-custom">Yank Cookies</button>
+    <button id="restoreCookies" class="btn btn-success btn-custom">Restore Cookies</button>
+    <button id="exportCookies" class="btn btn-warning btn-custom">Export Cookies</button>
+    <button id="importCookies" class="btn btn-info btn-custom">Import Cookies</button>
+
+      <!-- <button id="getCookies">List Cookies</button>
+      <button id="yankCookies">Yank Cookies</button>
+      <button id="restoreCookies">Restore Cookies</button>
+      <button id="exportCookies">Export Cookies</button>
+      <button id="importCookies">Import Cookies</button>
+      <div id="cookieList"></div> -->
+    <div id="cookieList"></div>
+
+    <div class="popup-footer">
+        <small>&copy; 2025 Save the Biscuits by Mate Bosze</small>
+    </div>
+  </div>
 </body>
 </html>
+<script src="popup.js"></script>
