disable the cookieList div, then show it after clicking a button

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -11,7 +11,7 @@
   <div class="container text-center">
     <div class="popup-header">
         <img class="logo" src="../cookie.png" alt="Cookie Icon">
-        <h1>Save the Cookies</h1>
+        <h1>Save the Biscuits</h1>
     </div>
 
     <button id="getCookies" class="btn btn-primary btn-custom">List Cookies</button>
