implement cloud sync with google account

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -19,6 +19,7 @@
     <button id="restoreCookies" class="btn btn-success btn-custom">Restore Cookies</button>
     <button id="exportCookies" class="btn btn-warning btn-custom">Export Cookies</button>
     <button id="importCookies" class="btn btn-info btn-custom">Import Cookies</button>
+    <button id="openSyncPage" class="btn btn-secondary">Open Sync Page</button>
 
       <!-- <button id="getCookies">List Cookies</button>
       <button id="yankCookies">Yank Cookies</button>
